# capbility_prototype

./: .gdb_history  .gdbinit  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  include.mk  rust-toolchain.toml
.cargo/: config.toml
.cargo/cfg/: riscv64-unknown-safeos.json
examples/cross-crate-dynamic/: Cargo.toml  README.md
src/: lib.rs  main.rs
src/boot/: bits.h  encoding.h  entry.S  kernel.ld  s_trap.S
src/capability/: alloc.rs  cap.rs  cdt.rs  error.rs  mod.rs  object.rs  structs.rs
src/mm/: Cargo.toml
src/pm/: Cargo.toml
src/service_loader/: Cargo.toml
src/trusted_kernel/: Cargo.toml
src/trusted_kernel/kernel_macros/: Cargo.toml
src/trusted_kernel/kernel_macros/src/: lib.rs
src/trusted_kernel/kernel_macros/src/unwind_point/: mod.rs
src/trusted_kernel/src/: config.rs  globalallocator_impl.rs  kmem.rs  lib.rs  physmemallocator_buddy.rs  physmemallocator_slab.rs  test_framework.rs  trap.rs  vspace.rs
src/trusted_kernel/src/capability/: alloc.rs  cap.rs  cdt.rs  mod.rs  object.rs  rights.rs
src/trusted_kernel/src/crate_mgmt/: archive.rs  mod.rs  util.rs
src/trusted_kernel/src/elf_parser/: consts.rs  header.rs  mod.rs  reloc.rs  symtab.rs
src/trusted_kernel/src/kernel_object/: mod.rs  page_util.rs
src/trusted_kernel/src/kernel_object/asid/: mod.rs
src/trusted_kernel/src/kernel_object/frame/: mod.rs
src/trusted_kernel/src/kernel_object/page_table/: mod.rs
src/trusted_kernel/src/kernel_object/tcb/: layout.rs  mod.rs
src/trusted_kernel/src/kernel_object/untype/: mod.rs
src/trusted_kernel/src/kernel_object/untyped/: mod.rs
src/trusted_kernel/src/kernel_object/unwind_point/: mod.rs
src/trusted_kernel/src/sync/: mod.rs  mutex.rs
src/trusted_kernel/src/unwinding/: mod.rs  panic.rs  panicking.rs  personality.rs
src/trusted_kernel/src/unwinding/unwinder/: frame.rs  mod.rs
src/trusted_kernel/src/unwinding/unwinder/find_fde/: fixed.rs  gnu_eh_frame_hdr.rs
test_client/: Cargo.toml
test_client/.cargo/: config.toml
test_server/: Cargo.toml
tester/: Cargo.toml
tester/src/: lib.rs
tests/: Cargo.toml
trusted_core/: .gitignore  Cargo.toml  Makefile  entry.S  start_rust.c  trap.S
trusted_core/rust_main/: Cargo.toml  build.rs
trusted_core/rust_main/.cargo/: config  config.toml
trusted_core/rust_main/src/: config.rs  console.rs  cpu.rs  ecall.rs  globalallocator_impl.rs  heapallocator_buddy.rs  kmem.rs  lib.rs  link_app.S  logger.rs  main.rs  mutex.rs  pagetable.rs  physmemallocator_buddy.rs  physmemallocator_slab.rs  test_framework.rs  timer.rs  trap.rs  uart.rs  vma.rs  vspace.rs
trusted_core/rust_main/src/capability/: alloc.rs  cap.rs  cdt.rs  mod.rs  object.rs
trusted_core/rust_main/src/endpoint/: executor.rs  mod.rs  waker.rs
trusted_core/rust_main/src/kernel_object/: mod.rs  page_util.rs
trusted_core/rust_main/src/kernel_object/asid/: mod.rs
trusted_core/rust_main/src/kernel_object/endpoint/: executor.rs  mod.rs
trusted_core/rust_main/src/kernel_object/frame/: mod.rs
trusted_core/rust_main/src/kernel_object/page_table/: mod.rs
trusted_core/rust_main/src/kernel_object/tcb/: mod.rs
trusted_core/rust_main/src/kernel_object/untype/: mod.rs
trusted_core/rust_main/src/kernel_object/vspace/: asid.rs  bit_utils.rs  mod.rs  page.rs  page_config.rs  utils.rs  vm_rights.rs
trusted_core/rust_main/src/scheduler/: batch.rs  layout.rs  mod.rs  switch.S
trusted_core/rust_main/src/sync/: channel.rs  condvar.rs  mod.rs
trusted_core/rust_main/src/syscall/: io.rs  mod.rs  process.rs
trusted_core/rust_main/src/thread/: mod.rs
trusted_core/rust_main/src/unwinding/: abi.rs  mod.rs  panicking.rs  util.rs
trusted_core/rust_main/src/unwinding/unwinder/: frame.rs
trusted_core/rust_main/src/unwinding/unwinder/arch/: riscv64.rs
trusted_core/rust_main/src/unwinding/unwinder/find_fde/: mod.rs
(+39 files in other folders)
