[package]
name = "os"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "src/mm", "src/pm",
    "src/trusted_kernel", 
    "src/trusted_kernel/kernel_macros",
    "src/service_loader",
    "tester"
]
[workspace.dependencies]
linkme = "0.3.27"
spin = "0.9.8"
tester = { path = "tester" }
trusted_kernel = { path = "src/trusted_kernel" }

[profile.dev]
panic = "unwind"
[profile.release]
panic = "unwind"

[dependencies]
trusted_kernel = { path = "src/trusted_kernel"}
mm = {path = "src/mm"}
pm = {path = "src/pm"}
