[package]
name = "rust_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "1.2.1"
lazy_static = { version = "1.5.0", features = ["spin_no_std"]}
rand = { version = "0.8.5", default-features = false }
rand_pcg = "0.3.1"
