[package]
name = "rust_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "1.2.1"
lazy_static = { version = "1.5.0", features = ["spin_no_std"]}
rand = { version = "0.8.5", default-features = false }
rand_pcg = "0.3.1"
# spin = "0.5.2"
log = "0.4"

[dependencies.crossbeam-queue]
version = "0.3.11"
# compatible with no_std, activate when moved to safeos
default-features = false
features = ["alloc"]

# [dependencies.conquer-once]
# version = "0.2.0"
# default-features = false